@@ -14,7 +14,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.4'
   id 'org.springframework.boot' version '2.7.18'
   id 'uk.gov.hmcts.java' version '0.12.48'
-  id 'org.owasp.dependencycheck' version '8.4.3'
+  id 'org.owasp.dependencycheck' version '9.0.4'
   id 'com.github.ben-manes.versions' version '0.50.0'
   id 'org.sonarqube' version '3.5.0.2730'
   id 'au.com.dius.pact' version '4.2.14'
@@ -130,7 +130,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   useJUnitPlatform()
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+}
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -249,7 +254,8 @@ dependencyCheck {
 
 
 def versions = [
-  pitest          : '1.15.0',
+  pitest          : '1.15.3',
+  gradlePitest    : '1.15.0',
   junit           : '5.10.1',
   junitPlatform   : '1.10.1',
   reformLogging   : '5.1.7',
@@ -398,6 +404,9 @@ dependencies {
 
   implementation group:  'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
+  implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13'
+  implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.13'
+
   implementation group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
 
 
@@ -412,8 +421,6 @@ dependencies {
   implementation 'org.projectlombok:lombok:1.18.30'
 
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
-
-  testImplementation libraries.junit5
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
@@ -433,8 +440,14 @@ dependencies {
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
+
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0', classifier: 'all', {
+    exclude group: 'commons-io', module: 'commons-io'
+    exclude group: 'org.apache.commons', module: 'commons-lang3'
+  }
+
   testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
-  testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.pitest}"
+  testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.gradlePitest}"
   testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:${versions.sonarPitest}"
 
   testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.7.2'
@@ -453,7 +466,7 @@ dependencies {
   smokeTestImplementation sourceSets.test.runtimeClasspath
 
   contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-
+  contractTestImplementation libraries.junit5
   contractTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-core'
   contractTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
   contractTestImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
